--- a/comunecosta.html
+++ b/comunecosta.html
@@ -304,6 +304,48 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+
+        /* Custom Div Icons for Leaflet */
+        .leaflet-div-icon {
+            background: none;
+            border: none;
+        }
+
+        .custom-area-icon {
+            background-color: #28a745; /* Green for emergency areas */
+            border-radius: 50%;
+            width: 25px;
+            height: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            border: 2px solid white;
+            box-shadow: 0 0 5px rgba(0,0,0,0.5);
+        }
+
+        .custom-gate-icon {
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 14px;
+            font-weight: bold;
+            border: 3px solid white;
+            box-shadow: 0 0 8px rgba(0,0,0,0.7);
+        }
+
+        .custom-gate-icon.red {
+            background-color: #dc3545; /* Red for Cancello Rosso */
+        }
+        .custom-gate-icon.orange {
+            background-color: #fd7e14; /* Orange for Cancello Arancione */
+        }
     </style>
 </head>
 
@@ -335,7 +377,7 @@
 
         <div id="emergency-areas-info-card" class="info-card" data-roles="cittadino,comune,ente">
             <h2><i class="fas fa-map-marker-alt mr-2"></i>Aree di Emergenza / Punti Operativi</h2>
-            <p>Di seguito le aree di emergenza (punti di raccolta, assistenza) e i punti operativi (es. cancelli, punti di monitoraggio) sul territorio comunale.</p>
+            <p id="map-points-intro-text">Di seguito le aree di emergenza (punti di raccolta, assistenza) sul territorio comunale.</p>
             <div id="punti-mappa-display">
             </div>
             <p class="no-data" id="no-punti-mappa-message" style="display: none;">Nessun punto mappa disponibile per
@@ -416,6 +458,8 @@
         const alertsList = document.getElementById('alerts-list');
         const noAlertsMessage = document.getElementById('no-alerts-message');
         const alertComuneNamePlaceholder = document.getElementById('alert-comune-name-placeholder');
+        const mapPointsIntroText = document.getElementById('map-points-intro-text');
+
 
         let map = null; // Leaflet map variable
         let currentRole = 'cittadino'; // Default role, will be overridden by URL param
@@ -471,12 +515,6 @@
         // Funzione per ottenere la descrizione testuale del colore di criticità
         function getColorDescription(criticityCode) {
             return globalColors[criticityCode] ? globalColors[criticityCode].description : 'non definita. Contattare le autorità competenti per maggiori informazioni.';
-        }
-
-        // Funzione per ottenere la classe CSS per il colore di criticità
-        function getCriticityColorClass(criticityCode) {
-            const criticityMap = { 'A1': 'color-green', 'A2': 'color-yellow', 'A3': 'color-orange', 'A4': 'color-red' };
-            return criticityMap[criticityCode] || '';
         }
 
         // --- Dati GeoJSON per le Aree di Emergenza (per Policoro) ---
@@ -587,6 +625,7 @@
                 nome: "Cancello Torre Mare 2",
                 ubicazione: "C.da Torre Mare 2",
                 tipologia: "Cancello Rosso (Maremoto)", // Più descrittivo per operatore
+                livello_allerta: "Rosso", // per icona colore
                 lat: 40.20883394323659, lon: 16.665672863620713,
                 note: "Blocco totale traffico. Consentito solo mezzi di soccorso. Attivo in allerta A3/A4. Per accedere alla viabilità di sfollamento dalla costa."
             },
@@ -594,6 +633,7 @@
                 nome: "Cancello Torre Mare",
                 ubicazione: "C.da Torre Mare (Area limitrofa)",
                 tipologia: "Cancello Rosso (Maremoto)",
+                livello_allerta: "Rosso",
                 lat: 40.207500, lon: 16.664500,
                 note: "Blocco totale traffico. Attivo in allerta A3/A4."
             },
@@ -601,6 +641,7 @@
                 nome: "Cancello Torre Mare 3",
                 ubicazione: "C.da Torre Mare (Area limitrofa)",
                 tipologia: "Cancello Rosso (Maremoto)",
+                livello_allerta: "Rosso",
                 lat: 40.206000, lon: 16.663000,
                 note: "Blocco totale traffico. Attivo in allerta A3/A4."
             },
@@ -608,6 +649,7 @@
                 nome: "Cancello Via Lido",
                 ubicazione: "Via Lido (altezza Ex Zuccherificio)",
                 tipologia: "Cancello Arancione/Rosso (Maremoto)",
+                livello_allerta: "Arancione", // sarà Arancione o Rosso a seconda dell'allerta
                 lat: 40.20858421660303, lon: 16.685300392249157,
                 note: "Controllo accesso e informazione alla popolazione. Attivo in allerta A2/A3/A4. Percorso di evacuazione primario."
             },
@@ -615,6 +657,7 @@
                 nome: "Cancello Santapelagina",
                 ubicazione: "C.da Santapelagina (area limitrofa)",
                 tipologia: "Cancello Arancione (Maremoto)",
+                livello_allerta: "Arancione",
                 lat: 40.197000, lon: 16.675000,
                 note: "Punto di controllo traffico e indicazione vie di fuga. Attivo in allerta A2/A3."
             },
@@ -622,6 +665,7 @@
                 nome: "Cancello Santapelagina 1",
                 ubicazione: "C.da Santapelagina (Area limitrofa)",
                 tipologia: "Cancello Arancione (Maremoto)",
+                livello_allerta: "Arancione",
                 lat: 40.196000, lon: 16.674000,
                 note: "Punto di controllo traffico. Attivo in allerta A2/A3."
             },
@@ -629,6 +673,7 @@
                 nome: "Cancello Santapelagina 2",
                 ubicazione: "C.da Santapelagina (Area limitrofa)",
                 tipologia: "Cancello Arancione (Maremoto)",
+                livello_allerta: "Arancione",
                 lat: 40.195000, lon: 16.673000,
                 note: "Punto di controllo traffico. Attivo in allerta A2/A3."
             },
@@ -636,6 +681,7 @@
                 nome: "Cancello Marinella 1",
                 ubicazione: "C.da Marinella (Area limitrofa)",
                 tipologia: "Cancello Rosso (Maremoto)",
+                livello_allerta: "Rosso",
                 lat: 40.189000, lon: 16.690000,
                 note: "Blocco totale traffico. Attivo in allerta A3/A4. Per accedere alla viabilità di sfollamento dalla costa sud."
             },
@@ -643,6 +689,7 @@
                 nome: "Cancello Marinella",
                 ubicazione: "C.da Marinella (Area limitrofa)",
                 tipologia: "Cancello Rosso (Maremoto)",
+                livello_allerta: "Rosso",
                 lat: 40.188000, lon: 16.691000,
                 note: "Blocco totale traffico. Attivo in allerta A3/A4."
             },
@@ -760,15 +807,6 @@
                             "before": ["Controllare lo stato delle abitazioni nei pressi di versanti.", "Evitare modifiche non autorizzate del territorio."],
                             "during": ["Non avvicinarsi a pendii o aree instabili.", "In caso di smottamenti, allontanarsi immediatamente e avvisare le autorità."],
                             "after": ["Attendere le verifiche geologiche prima di rientrare in aree a rischio."]
-                        }
-                    },
-                    "rischio sismico": {
-                        "alertStatus": "A2",
-                        "alertMessage": "Suscettibilità sismica moderata. Adottare precauzioni standard.",
-                        "guidelines": {
-                            "before": ["Fissare mobili pesanti.", "Individuare luoghi sicuri all'interno degli edifici.", "Preparare un kit di emergenza sismica."],
-                            "during": ["Cercare riparo sotto strutture robuste o in vani di porte.", "Allontanarsi da finestre e oggetti che possono cadere.", "Se all'aperto, allontanarsi da edifici, alberi, pali."],
-                            "after": ["Non rientrare in edifici danneggiati.", "Interrompere gas, acqua ed elettricità se possibile.", "Seguire le indicazioni delle squadre di soccorso."]
                         }
                     }
                 },
@@ -931,12 +969,14 @@
                 // --- Emergency Areas / Operational Points (combined for display and map) ---
                 const allMapPoints = [];
                 if (comuneData.aree_emergenza) {
-                    allMapPoints.push(...comuneData.aree_emergenza.map(p => ({...p, isOperational: false})));
+                    allMapPoints.push(...comuneData.aree_emergenza.map(p => ({...p, type: 'area'})));
                 }
-                if (comuneData.punti_operativi) {
-                    allMapPoints.push(...comuneData.punti_operativi.map(p => ({...p, isOperational: true})));
+                if (comuneData.punti_operativi && (currentRole === 'comune' || currentRole === 'ente')) {
+                    allMapPoints.push(...comuneData.punti_operativi.map(p => ({...p, type: 'gate'})));
+                    mapPointsIntroText.textContent = "Di seguito le aree di emergenza e i punti operativi (cancelli rossi/arancioni) sul territorio comunale.";
+                } else {
+                    mapPointsIntroText.textContent = "Di seguito le aree di emergenza (punti di raccolta, assistenza) sul territorio comunale.";
                 }
-
 
                 if (allMapPoints.length > 0) {
                     noPuntiMappaMessage.style.display = 'none';
@@ -945,42 +985,54 @@
                     let firstPointCoords = [0,0]; // Fallback for map center
 
                     allMapPoints.forEach((punto, index) => {
-                        const puntoItem = document.createElement('div');
-                        puntoItem.className = `punto-mappa-item ${punto.isOperational ? 'operative-point' : ''}`;
-                        puntoItem.innerHTML = `
-                            <span class="punto-type">${punto.tipologia}</span>
-                            <p class="punto-name">${punto.nome}</p>
-                            <p class="punto-address"><i class="fas fa-map-pin mr-1"></i>${punto.ubicazione}</p>
-                            <p class="punto-coords">Lat: ${punto.lat}, Lon: ${punto.lon}</p>
-                            ${punto.note ? `<p class="punto-notes"><i class="fas fa-sticky-note mr-1"></i>${punto.note}</p>` : ''}
-                        `;
-                        puntiMappaDisplay.appendChild(puntoItem);
+                        // Only display list items if allowed by role
+                        if (punto.type === 'area' || (punto.type === 'gate' && (currentRole === 'comune' || currentRole === 'ente'))) {
+                            const puntoItem = document.createElement('div');
+                            puntoItem.className = `punto-mappa-item ${punto.type === 'gate' ? 'operative-point' : ''}`;
+                            puntoItem.innerHTML = `
+                                <span class="punto-type">${punto.tipologia}</span>
+                                <p class="punto-name">${punto.nome}</p>
+                                <p class="punto-address"><i class="fas fa-map-pin mr-1"></i>${punto.ubicazione}</p>
+                                <p class="punto-coords">Lat: ${punto.lat}, Lon: ${punto.lon}</p>
+                                ${punto.note ? `<p class="punto-notes"><i class="fas fa-sticky-note mr-1"></i>${punto.note}</p>` : ''}
+                            `;
+                            puntiMappaDisplay.appendChild(puntoItem);
+                        }
 
                         if (punto.lat && punto.lon) {
                             if (index === 0) firstPointCoords = [punto.lat, punto.lon]; // Set first point for initial view
 
                             let markerIcon;
-                            if (punto.isOperational) {
+                            if (punto.type === 'gate' && (currentRole === 'comune' || currentRole === 'ente')) {
                                 // Custom icon for operational points (e.g., red pin for cancelli)
-                                markerIcon = L.icon({
-                                    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png', // Red marker for operational points
-                                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-                                    iconSize: [25, 41],
-                                    iconAnchor: [12, 41],
-                                    popupAnchor: [1, -34],
-                                    shadowSize: [41, 41]
+                                let iconColorClass = '';
+                                if (punto.livello_allerta && punto.livello_allerta.toLowerCase().includes('rosso')) {
+                                    iconColorClass = 'red';
+                                } else if (punto.livello_allerta && punto.livello_allerta.toLowerCase().includes('arancione')) {
+                                    iconColorClass = 'orange';
+                                }
+
+                                markerIcon = L.divIcon({
+                                    className: `leaflet-div-icon custom-gate-icon ${iconColorClass}`,
+                                    html: '<i class="fas fa-ban"></i>', // Ban symbol for gates
+                                    iconSize: [30, 30],
+                                    iconAnchor: [15, 15],
+                                    popupAnchor: [0, -15]
+                                });
+                            } else if (punto.type === 'area') {
+                                // Default green marker for emergency areas
+                                markerIcon = L.divIcon({
+                                    className: 'leaflet-div-icon custom-area-icon',
+                                    html: '<i class="fas fa-hospital"></i>', // Hospital/shelter symbol for areas
+                                    iconSize: [25, 25],
+                                    iconAnchor: [12, 12],
+                                    popupAnchor: [0, -12]
                                 });
                             } else {
-                                // Default green marker for emergency areas
-                                markerIcon = L.icon({
-                                    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png', // Green marker for emergency areas
-                                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-                                    iconSize: [25, 41],
-                                    iconAnchor: [12, 41],
-                                    popupAnchor: [1, -34],
-                                    shadowSize: [41, 41]
-                                });
+                                // Skip adding marker if it's a gate and role is cittadino
+                                return;
                             }
+
 
                             const marker = L.marker([punto.lat, punto.lon], { icon: markerIcon })
                                 .bindPopup(`<strong>${punto.nome}</strong><br>${punto.ubicazione}<br>${punto.tipologia}${punto.note ? `<br><em>${punto.note}</em>` : ''}`);
